--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "files.exclude": {
+    "**/.eslintcache": true,
     "**/.gitignore": true,
     "**/.vscode": true,
     "**/dist": true,
