--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vitamin",
   "license": "MIT",
   "version": "0.0.0",
+  "private": true,
   "dependencies": {
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -9,9 +10,9 @@
   "devDependencies": {
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
-    "@vitejs/plugin-react-refresh": "1.2.2",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "@typescript-eslint/parser": "4.15.0",
+    "@vitejs/plugin-react-refresh": "1.3.0",
     "autoprefixer": "10.2.4",
     "cssnano": "4.1.10",
     "eslint": "7.19.0",
@@ -23,27 +24,23 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "27.0.0",
-    "husky": "4.3.8",
+    "husky": "5.0.9",
     "lint-staged": "10.5.4",
     "postcss": "8.2.5",
     "prettier": "2.2.1",
     "stylelint": "13.9.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
-    "tailwindcss": "2.0.2",
+    "tailwindcss": "2.0.3",
     "typescript": "4.1.3",
-    "vite": "2.0.0-beta.65",
+    "vite": "2.0.0-beta.66",
     "vite-plugin-pwa": "0.4.6"
   },
   "scripts": {
+    "postinstall": "husky install",
     "build": "tsc && vite build",
     "dev": "vite",
     "serve": "vite preview"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
