--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "0.2.1",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
     "@typescript-eslint/eslint-plugin": "4.15.0",
