--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "postinstall": "husky install",
+    "build": "tsc && vite build",
+    "dev": "vite --open",
+    "serve": "vite preview"
+  },
   "dependencies": {
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -36,12 +42,6 @@
     "typescript": "4.1.3",
     "vite": "2.0.0-beta.66",
     "vite-plugin-pwa": "0.4.6"
-  },
-  "scripts": {
-    "postinstall": "husky install",
-    "build": "tsc && vite build",
-    "dev": "vite",
-    "serve": "vite preview"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
