chore: simplify eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,17 @@
     "prettier",
     "prettier/unicorn"
   ],
+  "rules": {
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["tailwind.config.js"],
+        "optionalDependencies": false,
+        "peerDependencies": true,
+        "bundledDependencies": false
+      }
+    ]
+  },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
@@ -17,9 +28,6 @@
         "project": "./tsconfig.json"
       },
       "extends": [
-        "eslint:recommended",
-        "plugin:import/warnings",
-        "plugin:import/errors",
         "plugin:import/typescript",
         "plugin:react/recommended",
         "plugin:react-hooks/recommended",
@@ -28,18 +36,18 @@
         "plugin:@typescript-eslint/recommended-requiring-type-checking",
         "airbnb-typescript",
         "airbnb/hooks",
-        "plugin:unicorn/recommended",
-        "prettier",
         "prettier/@typescript-eslint",
-        "prettier/react",
-        "prettier/unicorn"
+        "prettier/react"
       ],
       "rules": {
         "import/namespace": "off",
         "import/no-extraneous-dependencies": [
           "error",
           {
-            "optionalDependencies": false
+            "devDependencies": ["vite.config.ts"],
+            "optionalDependencies": false,
+            "peerDependencies": true,
+            "bundledDependencies": false
           }
         ],
 
