--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "tailwindcss": "2.0.3",
     "typescript": "4.1.3",
     "vite": "2.0.0-beta.66",
-    "vite-plugin-pwa": "0.4.6"
+    "vite-plugin-pwa": "0.4.6",
+    "vite-tsconfig-paths": "2.1.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
