--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "clsx": "1.1.1",
+    "i18next": "19.8.7",
+    "i18next-browser-languagedetector": "6.0.1",
+    "i18next-http-backend": "1.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-i18next": "11.8.6",
+    "react-query": "3.8.2",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.2.1",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "@vitejs/plugin-react-refresh": "1.3.0",
