--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "clsx": "1.1.1",
-    "i18next": "19.8.7",
+    "i18next": "19.8.9",
     "i18next-browser-languagedetector": "6.0.1",
     "i18next-http-backend": "1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-i18next": "11.8.6",
-    "react-query": "3.9.6",
+    "react-i18next": "11.8.7",
+    "react-query": "3.9.8",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-unicorn": "28.0.1",
+    "eslint-plugin-unicorn": "28.0.2",
     "husky": "5.0.9",
     "lint-staged": "10.5.4",
     "postcss": "8.2.6",
@@ -48,8 +48,8 @@
     "stylelint-config-standard": "20.0.0",
     "tailwindcss": "2.0.3",
     "typescript": "4.1.5",
-    "vite": "2.0.0-beta.70",
-    "vite-plugin-pwa": "0.4.6",
+    "vite": "2.0.1",
+    "vite-plugin-pwa": "0.4.7",
     "vite-tsconfig-paths": "2.1.0"
   },
   "lint-staged": {
