--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "build": "tsc && vite build",
     "dev": "vite --open",
+    "test": "yarn build && cypress open",
+    "build": "tsc --project tsconfig.json && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "@vitejs/plugin-react-refresh": "1.3.1",
     "autoprefixer": "10.2.4",
     "cssnano": "4.1.10",
+    "cypress": "6.5.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "12.3.1",
