Revert "chore(typescript): disable skipLibCheck"
This reverts commit 90b0d0323418c789dab137c02cda3429a3560d89.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "Node",
     "noEmit": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
     "types": ["vite/client"]
