--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "cypress open",
     "test:headless": "cypress run",
     "build": "tsc --project tsconfig.json && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -36,7 +37,7 @@
     "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "29.0.0",
-    "husky": "5.2.0",
+    "husky": "6.0.0",
     "lint-staged": "10.5.4",
     "postcss": "8.2.9",
     "prettier": "2.2.1",
