chore: migrate eslint-config-prettier config to 8.x

--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -12,9 +12,7 @@
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "airbnb-typescript/base",
     "plugin:unicorn/recommended",
-    "prettier",
-    "prettier/@typescript-eslint",
-    "prettier/unicorn"
+    "prettier"
   ],
   "rules": {
     "import/namespace": "off",
