--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["tailwind.config.js"] }
-    ]
+    ],
+    "unicorn/prefer-module": "off"
   },
   "overrides": [
     {
