--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:headless": "cypress run",
     "build": "tsc --project tsconfig.json && vite build",
     "serve": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -27,6 +28,7 @@
     "@vitejs/plugin-react-refresh": "1.3.3",
     "autoprefixer": "10.2.6",
     "cypress": "7.5.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "7.29.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "12.3.1",
@@ -54,5 +56,10 @@
     "*.css": "stylelint --fix",
     "*.{html,js,ts,tsx,css,md,json}": "prettier --write"
   },
-  "browserslist": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48"
+  "browserslist": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
