--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "3.9.7",
     "@tailwindcss/forms": "0.3.3",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
@@ -42,6 +43,7 @@
     "lint-staged": "11.0.0",
     "postcss": "8.3.5",
     "prettier": "2.3.1",
+    "rollup-plugin-istanbul": "3.0.0",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "22.0.0",
