--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "target": "ESNext",
     "types": ["vite/client"]
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "global.d.ts"]
 }
