--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,30 +14,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Setup Node.js 14.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Build
-        run: yarn build --mode test
-
-      - name: Test
-        run: yarn test:headless
+          install-command: yarn --frozen-lockfile --silent
+          build: yarn build --mode test
+          start: yarn serve
+          wait-on: http://localhost:5000
+          command: yarn test:headless
 
       - name: Upload coverage
         uses: codecov/codecov-action@v1
