--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext",
-    "types": ["vite/client"]
+    "target": "ESNext"
   },
   "include": ["src", "vite.config.ts", "global.d.ts"]
 }
