--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@types/react-router-dom": "5.3.0",
 		"@typescript-eslint/eslint-plugin": "4.31.2",
 		"@typescript-eslint/parser": "4.31.2",
-		"@vitejs/plugin-react-refresh": "1.3.6",
+		"@vitejs/plugin-react": "1.0.1",
 		"autoprefixer": "10.3.5",
 		"cypress": "8.4.1",
 		"cz-conventional-changelog": "3.3.0",
