--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"baseUrl": "src",
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"module": "ESNext",
 		"moduleResolution": "Node",
