--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-react": "7.26.0",
 		"eslint-plugin-react-hooks": "4.2.0",
+		"eslint-plugin-react-prefer-function-component": "0.0.7",
 		"eslint-plugin-unicorn": "36.0.0",
 		"husky": "7.0.2",
 		"lint-staged": "11.1.2",
