--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"target": "ESNext"
+		"target": "ESNext",
+		"useUnknownInCatchVariables": true
 	},
 	"include": ["src", "vite.config.ts", "global.d.ts"]
 }
