--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
 	"css.validate": false,
+	"diffEditor.ignoreTrimWhitespace": false,
 	"editor.codeActionsOnSave": [
 		"source.addMissingImports",
 		"source.fixAll",
 		"source.organizeImports"
 	],
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.foldingImportsByDefault": true,
 	"editor.formatOnSave": true,
+	"editor.tabSize": 2,
+	"eslint.packageManager": "yarn",
 	"files.exclude": {
 		"**/.eslintcache": true,
 		"**/.gitignore": true,
@@ -16,8 +20,12 @@
 		"**/node_modules": true,
 		"**/yarn.lock": true
 	},
+	"files.watcherExclude": {
+		"**/dist": true
+	},
 	"git.enableCommitSigning": true,
+	"javascript.format.enable": false,
 	"stylelint.validate": ["css"],
-	"typescript.tsdk": "node_modules/typescript/lib",
-	"editor.tabSize": 2
+	"typescript.disableAutomaticTypeAcquisition": true,
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
