chore: add a script to run Typescript, ESLint and stylelint

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"serve:test": "start-server-and-test 'yarn serve' http://localhost:5000",
 		"test": "yarn serve:test 'cypress open'",
 		"test:headless": "yarn serve:test 'cypress run'",
-		"format": "prettier -w --ignore-path .gitignore ."
+		"format": "prettier -w --ignore-path .gitignore .",
+		"lint": "tsc && eslint --cache --fix --ignore-path .gitignore src && stylelint --cache --fix --ignore-path .gitignore src/*.css"
 	},
 	"dependencies": {
 		"react": "17.0.2",
@@ -71,7 +72,7 @@
 		}
 	},
 	"lint-staged": {
-		"*.css": "stylelint --fix",
+		"*.css": "stylelint --cache --fix",
 		"*.{html,js,ts,tsx,css,md,json}": "prettier --write",
 		"*.{js,ts,tsx}": "eslint --cache --fix"
 	}
