--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"test": "yarn serve:test 'cypress open'",
 		"test:headless": "yarn serve:test 'cypress run'",
 		"format": "prettier -w --ignore-path .gitignore .",
-		"lint": "tsc && eslint --cache --fix --ignore-path .gitignore src && stylelint --cache --fix --ignore-path .gitignore src/*.css"
+		"run-tsc": "tsc",
+		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .js,.ts,.tsx",
+		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
+		"lint": "npm-run-all --parallel run-tsc run-stylelint run-eslint"
 	},
 	"dependencies": {
 		"react": "17.0.2",
@@ -46,6 +49,7 @@
 		"eslint-plugin-unicorn": "36.0.0",
 		"husky": "7.0.2",
 		"lint-staged": "11.1.2",
+		"npm-run-all": "4.1.5",
 		"postcss": "8.3.8",
 		"prettier": "2.4.1",
 		"rollup-plugin-istanbul": "3.0.0",
