chore: add validate script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .js,.ts,.tsx",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
-		"lint": "npm-run-all --parallel run-tsc run-stylelint run-eslint"
+		"lint": "npm-run-all --parallel run-tsc run-stylelint run-eslint",
+		"validate": "yarn lint && yarn build --mode test && yarn test:headless"
 	},
 	"dependencies": {
 		"react": "17.0.2",
