--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,14 +14,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cypress run
+      - name: Install dependencies
         uses: cypress-io/github-action@v2
         with:
           install-command: yarn --frozen-lockfile --silent
+          # just perform install
+          runTests: false
+
+      - name: Lint
+      - run: yarn lint
+
+      - name: Run e2e tests
+        uses: cypress-io/github-action@v2
+        with:
           build: yarn build --mode test
           command: yarn test:headless
+          # we have already installed all dependencies above
+          install: false
+          # Cypress tests and config file are in "e2e" folder
+          working-directory: e2e
 
       - name: Upload coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
