--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@cypress/code-coverage": "3.9.11",
+		"@nabla/vite-plugin-eslint": "1.3.2",
 		"@tailwindcss/forms": "0.3.4",
 		"@types/react": "17.0.26",
 		"@types/react-dom": "17.0.9",
