--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
 		"prepare": "husky install",
 		"serve": "vite preview",
 		"serve:test": "start-server-and-test 'yarn serve' http://localhost:5000",
-		"test": "yarn serve:test 'cypress open'",
-		"test:headless": "yarn serve:test 'cypress run'",
+		"test": "jest -o --watch",
+		"test:ci": "jest --ci",
+		"test:e2e": "yarn serve:test 'cypress open'",
+		"test:e2e:ci": "yarn serve:test 'cypress run'",
 		"format": "prettier -uw --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
 		"lint": "npm-run-all --parallel run-tsc run-stylelint run-eslint",
-		"validate": "yarn lint && yarn build --mode test && yarn test:headless"
+		"validate": "yarn lint && yarn build --mode test && yarn test:e2e:ci"
 	},
 	"dependencies": {
 		"react": "17.0.2",
@@ -26,9 +28,15 @@
 		"react-router-dom": "5.3.0"
 	},
 	"devDependencies": {
+		"@babel/core": "7.15.5",
+		"@babel/preset-env": "7.15.6",
+		"@babel/preset-react": "7.14.5",
+		"@babel/preset-typescript": "7.15.0",
 		"@cypress/code-coverage": "3.9.11",
 		"@nabla/vite-plugin-eslint": "1.3.2",
 		"@tailwindcss/forms": "0.3.4",
+		"@testing-library/react": "12.1.1",
+		"@types/jest": "27.0.2",
 		"@types/react": "17.0.33",
 		"@types/react-dom": "17.0.10",
 		"@types/react-router-dom": "5.3.2",
@@ -36,6 +44,7 @@
 		"@typescript-eslint/parser": "4.33.0",
 		"@vitejs/plugin-react": "1.0.7",
 		"autoprefixer": "10.4.0",
+		"babel-jest": "27.2.4",
 		"cypress": "8.7.0",
 		"cz-conventional-changelog": "3.3.0",
 		"eslint": "7.32.0",
@@ -50,6 +59,7 @@
 		"eslint-plugin-react-prefer-function-component": "0.0.7",
 		"eslint-plugin-unicorn": "37.0.1",
 		"husky": "7.0.4",
+		"jest": "27.2.4",
 		"lint-staged": "11.2.6",
 		"npm-run-all": "4.1.5",
 		"postcss": "8.3.11",
