--- a/jest.config.json
+++ b/jest.config.json
@@ -5,6 +5,7 @@
 	"coverageDirectory": "jest-coverage",
 	"coverageReporters": ["html", "text-summary"],
 	"moduleDirectories": ["node_modules", "src"],
+	"setupFilesAfterEnv": ["<rootDir>/jestSetup.ts"],
 	"testEnvironment": "jsdom",
 	"testMatch": ["<rootDir>/src/**/__tests__/*.{ts,tsx}"]
 }
