--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"prepare": "husky install",
 		"serve": "vite preview",
 		"serve:test": "start-server-and-test 'yarn serve' http://localhost:5000",
-		"test": "jest -o --watch",
+		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"test:e2e": "yarn serve:test 'cypress open'",
 		"test:e2e:ci": "yarn serve:test 'cypress run'",
@@ -35,7 +35,9 @@
 		"@cypress/code-coverage": "3.9.11",
 		"@nabla/vite-plugin-eslint": "1.3.2",
 		"@tailwindcss/forms": "0.3.4",
+		"@testing-library/jest-dom": "5.14.1",
 		"@testing-library/react": "12.1.1",
+		"@testing-library/user-event": "13.2.1",
 		"@types/jest": "27.0.2",
 		"@types/react": "17.0.33",
 		"@types/react-dom": "17.0.10",
