test(jest): add jest-watch-typeahead

--- a/jest.config.json
+++ b/jest.config.json
@@ -15,5 +15,9 @@
 	"moduleDirectories": ["node_modules", "src"],
 	"setupFilesAfterEnv": ["<rootDir>/jestSetup.ts"],
 	"testEnvironment": "jsdom",
-	"testMatch": ["<rootDir>/src/**/__tests__/*.{ts,tsx}"]
+	"testMatch": ["<rootDir>/src/**/__tests__/*.{ts,tsx}"],
+	"watchPlugins": [
+		"jest-watch-typeahead/filename",
+		"jest-watch-typeahead/testname"
+	]
 }
