--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint-plugin-unicorn": "37.0.1",
 		"husky": "7.0.4",
 		"jest": "27.2.4",
+		"jest-watch-typeahead": "1.0.0",
 		"lint-staged": "11.2.6",
 		"npm-run-all": "4.1.5",
 		"postcss": "8.3.11",
