chore(lint-staged, jest): run the tests relevant to the changed files

--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
 	"lint-staged": {
 		"*": "prettier -uw",
 		"*.css": "stylelint --cache --fix",
-		"*.{js,ts,tsx}": "eslint --cache --fix"
+		"*.{js,ts,tsx}": [
+			"eslint --cache --fix",
+			"jest --findRelatedTests"
+		]
 	}
 }
