--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
 		"eslint-config-airbnb-typescript": "14.0.1",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "2.25.2",
+		"eslint-plugin-jest": "24.5.0",
+		"eslint-plugin-jest-dom": "3.9.2",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-react": "7.26.1",
 		"eslint-plugin-react-hooks": "4.2.0",
 		"eslint-plugin-react-prefer-function-component": "0.0.7",
+		"eslint-plugin-testing-library": "4.12.4",
 		"eslint-plugin-unicorn": "37.0.1",
 		"husky": "7.0.4",
 		"jest": "27.2.4",
