chore(jest): remove jestSetup file as it has only one line for now

--- a/jest.config.json
+++ b/jest.config.json
@@ -13,7 +13,7 @@
 	"coverageDirectory": "jest-coverage",
 	"coverageReporters": ["html", "text-summary"],
 	"moduleDirectories": ["node_modules", "src"],
-	"setupFilesAfterEnv": ["<rootDir>/jestSetup.ts"],
+	"setupFilesAfterEnv": ["@testing-library/jest-dom"],
 	"testEnvironment": "jsdom",
 	"testMatch": ["<rootDir>/src/**/__tests__/*.{ts,tsx}"],
 	"watchPlugins": [
