chore(jest): automatically clear mock calls and instances before every test

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
 	"bail": true,
+	"clearMocks": true,
 	"collectCoverage": true,
 	"collectCoverageFrom": ["<rootDir>/src/**/*.{ts,tsx}"],
 	"coverageThreshold": {
