--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -82,7 +82,13 @@
 		"import/no-extraneous-dependencies": [
 			"error",
 			{
-				"devDependencies": ["vite.config.ts", "**/__tests__/*.{ts,tsx}"]
+				"devDependencies": [
+					"vite.config.ts",
+					"src/setupTests.ts",
+					"src/testUtils.tsx",
+					"src/mocks/**",
+					"**/__tests__/*.{ts,tsx}"
+				]
 			}
 		],
 
