--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"npm-run-all": "4.1.5",
 		"postcss": "8.3.9",
 		"prettier": "2.4.1",
+		"rollup": "2.58.0",
 		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "13.13.1",
@@ -63,7 +64,9 @@
 		"typescript": "4.4.3",
 		"vite": "2.6.7",
 		"vite-plugin-pwa": "0.11.3",
-		"vite-tsconfig-paths": "3.3.17"
+		"vite-tsconfig-paths": "3.3.17",
+		"workbox-build": "6.3.0",
+		"workbox-window": "6.3.0"
 	},
 	"browserslist": {
 		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
