--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
 		"react-router-dom": "5.3.0"
 	},
 	"devDependencies": {
-		"@babel/core": "7.15.5",
-		"@babel/preset-env": "7.15.6",
+		"@babel/core": "7.15.8",
+		"@babel/preset-env": "7.15.8",
 		"@babel/preset-react": "7.14.5",
 		"@babel/preset-typescript": "7.15.0",
 		"@cypress/code-coverage": "3.9.11",
 		"@nabla/vite-plugin-eslint": "1.3.2",
 		"@tailwindcss/forms": "0.3.4",
 		"@testing-library/jest-dom": "5.14.1",
-		"@testing-library/react": "12.1.1",
-		"@testing-library/user-event": "13.2.1",
+		"@testing-library/react": "12.1.2",
+		"@testing-library/user-event": "13.3.0",
 		"@types/jest": "27.0.2",
 		"@types/react": "17.0.33",
 		"@types/react-dom": "17.0.10",
@@ -46,7 +46,7 @@
 		"@typescript-eslint/parser": "4.33.0",
 		"@vitejs/plugin-react": "1.0.7",
 		"autoprefixer": "10.4.0",
-		"babel-jest": "27.2.4",
+		"babel-jest": "27.2.5",
 		"cypress": "8.7.0",
 		"cz-conventional-changelog": "3.3.0",
 		"eslint": "7.32.0",
@@ -55,7 +55,7 @@
 		"eslint-config-airbnb-typescript": "14.0.1",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "2.25.2",
-		"eslint-plugin-jest": "24.5.0",
+		"eslint-plugin-jest": "25.0.5",
 		"eslint-plugin-jest-dom": "3.9.2",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-react": "7.26.1",
@@ -64,7 +64,7 @@
 		"eslint-plugin-testing-library": "4.12.4",
 		"eslint-plugin-unicorn": "37.0.1",
 		"husky": "7.0.4",
-		"jest": "27.2.4",
+		"jest": "27.2.5",
 		"jest-watch-typeahead": "1.0.0",
 		"lint-staged": "11.2.6",
 		"msw": "0.35.0",
@@ -82,9 +82,9 @@
 		"vite": "2.6.13",
 		"vite-plugin-pwa": "0.11.3",
 		"vite-tsconfig-paths": "3.3.17",
+		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.3.0",
-		"workbox-window": "6.3.0",
-		"whatwg-fetch": "3.6.2"
+		"workbox-window": "6.3.0"
 	},
 	"browserslist": {
 		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
