--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@cypress/code-coverage": "3.9.11",
 		"@nabla/vite-plugin-eslint": "1.3.2",
 		"@tailwindcss/forms": "0.3.4",
+		"@testing-library/dom": "8.7.2",
 		"@testing-library/jest-dom": "5.14.1",
 		"@testing-library/react": "12.1.2",
 		"@testing-library/user-event": "13.3.0",
