test: add test for useMediaQuery

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
 		"@testing-library/dom": "8.7.2",
 		"@testing-library/jest-dom": "5.14.1",
 		"@testing-library/react": "12.1.2",
+		"@testing-library/react-hooks": "7.0.2",
 		"@testing-library/user-event": "13.3.0",
+		"@types/css-mediaquery": "0.1.1",
 		"@types/jest": "27.0.2",
 		"@types/react": "17.0.33",
 		"@types/react-dom": "17.0.10",
@@ -48,6 +50,7 @@
 		"@vitejs/plugin-react": "1.0.7",
 		"autoprefixer": "10.4.0",
 		"babel-jest": "27.2.5",
+		"css-mediaquery": "0.1.2",
 		"cypress": "8.7.0",
 		"cz-conventional-changelog": "3.3.0",
 		"eslint": "7.32.0",
@@ -104,7 +107,7 @@
 		"*.css": "stylelint --cache --fix",
 		"*.{js,ts,tsx}": [
 			"eslint --cache --fix",
-			"jest --findRelatedTests"
+			"jest --findRelatedTests --coverage=false"
 		]
 	}
 }
