--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,7 @@
 		"**/dist": true,
 		"**/node_modules": true,
 		"**/yarn.lock": true,
-		"**/coverage": true,
-		"**/jest-coverage": true
+		"**/coverage": true
 	},
 	"files.watcherExclude": {
 		"**/dist": true
