chore: disable cypress coverage temporarily

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"test:e2e": "yarn serve:test 'cypress open'",
-		"test:e2e:ci": "vite build --mode test && yarn serve:test 'cypress run'",
+		"test:e2e:ci": "vite build && yarn serve:test 'cypress run'",
 		"format": "prettier -uw --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
@@ -76,7 +76,6 @@
 		"postcss": "8.3.11",
 		"prettier": "2.4.1",
 		"rollup": "2.59.0",
-		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "14.0.1",
 		"stylelint-config-prettier": "9.0.3",
