--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
-		"lint": "run-p run-tsc run-stylelint run-eslint",
+		"lint": "run-p run-tsc run-eslint run-stylelint",
 		"validate": "run-p lint test:ci test:e2e:ci"
 	},
 	"dependencies": {
