--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"test:e2e": "yarn serve:test 'cypress open'",
-		"test:e2e:ci": "vite build && yarn serve:test 'cypress run --record --key 55ab6c33-4a4b-4aaf-8dd0-cd99155efe65'",
+		"test:e2e:headless": "yarn serve:test 'cypress run'",
+		"test:e2e:ci": "vite build && yarn serve:test 'cypress run --record'",
 		"format": "prettier -uw --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
 		"lint": "run-p run-tsc run-eslint run-stylelint",
-		"validate": "run-p lint test:ci test:e2e:ci"
+		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
 		"react": "17.0.2",
