--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "beta",
+		"react-dom": "beta",
 		"react-query": "3.32.3",
 		"react-router-dom": "5.3.0"
 	},
@@ -37,8 +37,7 @@
 		"@tailwindcss/forms": "0.3.4",
 		"@testing-library/dom": "8.11.1",
 		"@testing-library/jest-dom": "5.15.0",
-		"@testing-library/react": "12.1.2",
-		"@testing-library/react-hooks": "7.0.2",
+		"@testing-library/react": "alpha",
 		"@testing-library/user-event": "13.5.0",
 		"@types/css-mediaquery": "0.1.1",
 		"@types/jest": "27.0.2",
