test(Cypress): use @testing-library/cypress

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev": "vite --open",
 		"prepare": "husky install",
 		"serve": "vite preview",
-		"serve:test": "start-server-and-test 'yarn serve' http://localhost:5000",
+		"serve:test": "start-server-and-test serve http://localhost:5000",
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"test:e2e": "yarn serve:test 'cypress open'",
@@ -35,6 +35,7 @@
 		"@babel/preset-typescript": "7.16.0",
 		"@nabla/vite-plugin-eslint": "1.3.4",
 		"@tailwindcss/forms": "0.3.4",
+		"@testing-library/cypress": "8.0.2",
 		"@testing-library/dom": "8.11.1",
 		"@testing-library/jest-dom": "5.15.1",
 		"@testing-library/react": "12.1.2",
