--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -10,7 +10,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ESNext",
-		"types": ["cypress"]
+		"types": ["cypress", "@testing-library/cypress"]
 	},
 	"include": ["."]
 }
