--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -1,8 +1,13 @@
 {
+	"root": true,
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"project": "./cypress/tsconfig.json"
 	},
+	"env": {
+		"cypress/globals": true
+	},
+	"plugins": ["cypress"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:import/warnings",
@@ -16,13 +21,16 @@
 	],
 	"rules": {
 		"import/namespace": "off",
-		"import/no-extraneous-dependencies": [
-			"error",
-			{
-				"devDependencies": ["./**/*.ts"]
-			}
-		],
+		"import/no-extraneous-dependencies": "off",
 		"@typescript-eslint/no-unused-expressions": "off",
-		"no-void": "off"
+		"no-void": "off",
+
+		"cypress/no-assigning-return-values": "error",
+		"cypress/no-unnecessary-waiting": "error",
+		"cypress/no-async-tests": "error",
+		"cypress/no-force": "error",
+		"cypress/assertion-before-screenshot": "error",
+		"cypress/require-data-selectors": "error",
+		"cypress/no-pause": "error"
 	}
 }
