--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@babel/preset-env": "7.16.4",
 		"@babel/preset-react": "7.16.0",
 		"@babel/preset-typescript": "7.16.0",
+		"@cypress/code-coverage": "3.9.11",
 		"@nabla/vite-plugin-eslint": "1.3.4",
 		"@tailwindcss/forms": "0.3.4",
 		"@testing-library/cypress": "8.0.2",
@@ -78,6 +79,7 @@
 		"postcss": "8.4.0",
 		"prettier": "2.5.0",
 		"rollup": "2.60.1",
+		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "14.1.0",
 		"stylelint-config-prettier": "9.0.3",
