--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,4 @@
 {
-	"extends": ["config:js-app", ":disableRateLimiting"]
+	"extends": ["config:js-app", ":disableRateLimiting"],
+	"labels": ["dependencies"]
 }
