chore(renovate): autoclose dependency dashboard

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,5 @@
 {
-	"extends": ["config:js-app", ":disableRateLimiting"],
+	"dependencyDashboardAutoclose": true,
+	"extends": [":disableRateLimiting", "config:js-app"],
 	"labels": ["dependencies"]
 }
