--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"serve:test": "start-server-and-test serve http://localhost:5000",
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
-		"test:e2e": "yarn serve:test 'cypress open'",
-		"test:e2e:headless": "yarn serve:test 'cypress run'",
-		"test:e2e:ci": "vite build && yarn serve:test 'cypress run --record'",
+		"test:e2e": "pnpm serve:test 'cypress open'",
+		"test:e2e:headless": "pnpm serve:test 'cypress run'",
+		"test:e2e:ci": "vite build && pnpm serve:test 'cypress run --record'",
 		"format": "prettier -uw --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
