--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@babel/preset-react": "7.16.0",
 		"@babel/preset-typescript": "7.16.0",
 		"@cypress/code-coverage": "3.9.12",
+		"@happy-dom/jest-environment": "2.24.4",
 		"@nabla/vite-plugin-eslint": "1.3.5",
 		"@tailwindcss/forms": "0.3.4",
 		"@testing-library/cypress": "8.0.2",
@@ -89,7 +90,6 @@
 		"vite": "2.7.1",
 		"vite-plugin-pwa": "0.11.10",
 		"vite-tsconfig-paths": "3.3.17",
-		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.4.2",
 		"workbox-window": "6.4.2"
 	},
