--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"@babel/preset-typescript": "7.16.0",
 		"@cypress/code-coverage": "3.9.12",
 		"@nabla/vite-plugin-eslint": "1.3.5",
-		"@tailwindcss/forms": "0.3.4",
+		"@tailwindcss/forms": "0.4.0",
 		"@testing-library/cypress": "8.0.2",
 		"@testing-library/dom": "8.11.1",
 		"@testing-library/jest-dom": "5.16.1",
@@ -84,7 +84,7 @@
 		"stylelint": "14.1.0",
 		"stylelint-config-prettier": "9.0.3",
 		"stylelint-config-standard": "24.0.0",
-		"tailwindcss": "2.2.19",
+		"tailwindcss": "3.0.0",
 		"typescript": "4.5.2",
 		"vite": "2.7.1",
 		"vite-plugin-pwa": "0.11.11",
@@ -108,7 +108,7 @@
 	"lint-staged": {
 		"*": "prettier -uw",
 		"*.css": "stylelint --cache --fix",
-		"*.{js,ts,tsx}": [
+		"*.{ts,tsx}": [
 			"eslint --cache --fix",
 			"jest --findRelatedTests --coverage=false"
 		]
