--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"prepare": "husky install",
 		"serve": "vite preview",
 		"serve:test": "start-server-and-test serve http://localhost:5000",
-		"test": "jest --watch",
-		"test:ci": "jest --ci",
+		"test": "vitest",
+		"test:ci": "vitest run --coverage",
 		"test:e2e": "pnpm serve:test 'cypress open'",
 		"test:e2e:headless": "pnpm serve:test 'cypress run'",
 		"test:e2e:ci": "vite build && pnpm serve:test 'cypress run --record'",
@@ -43,8 +43,6 @@
 		"@testing-library/react-hooks": "7.0.2",
 		"@testing-library/user-event": "13.5.0",
 		"@types/css-mediaquery": "0.1.1",
-		"@types/jest": "27.4.0",
-		"@types/node": "17.0.15",
 		"@types/react": "17.0.39",
 		"@types/react-dom": "17.0.11",
 		"@types/react-router-dom": "5.3.3",
@@ -52,7 +50,7 @@
 		"@typescript-eslint/parser": "5.10.2",
 		"@vitejs/plugin-react": "1.1.4",
 		"autoprefixer": "10.4.2",
-		"babel-jest": "27.5.0",
+		"c8": "7.11.0",
 		"css-mediaquery": "0.1.2",
 		"cypress": "9.4.1",
 		"cz-conventional-changelog": "3.3.0",
@@ -63,8 +61,6 @@
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-cypress": "2.12.1",
 		"eslint-plugin-import": "2.25.4",
-		"eslint-plugin-jest": "26.1.0",
-		"eslint-plugin-jest-dom": "4.0.1",
 		"eslint-plugin-jsx-a11y": "6.5.1",
 		"eslint-plugin-react": "7.28.0",
 		"eslint-plugin-react-hooks": "4.3.0",
@@ -72,15 +68,13 @@
 		"eslint-plugin-testing-library": "5.0.5",
 		"eslint-plugin-unicorn": "40.1.0",
 		"husky": "7.0.4",
-		"jest": "27.5.0",
-		"jest-watch-typeahead": "1.0.0",
+		"jsdom": "19.0.0",
 		"lint-staged": "12.3.3",
 		"msw": "0.36.8",
 		"npm-run-all": "4.1.5",
 		"postcss": "8.4.6",
 		"prettier": "2.5.1",
 		"rollup": "2.67.1",
-		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "14.3.0",
 		"stylelint-config-prettier": "9.0.3",
@@ -90,6 +84,7 @@
 		"vite": "2.7.13",
 		"vite-plugin-pwa": "0.11.13",
 		"vite-tsconfig-paths": "3.4.0",
+		"vitest": "0.2.1",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.4.2",
 		"workbox-window": "6.4.2"
@@ -105,8 +100,7 @@
 		"*": "prettier -uw",
 		"*.css": "stylelint --cache --fix",
 		"*.{ts,tsx}": [
-			"eslint --cache --fix",
-			"jest --findRelatedTests --coverage=false"
+			"eslint --cache --fix"
 		]
 	},
 	"nyc": {
