--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm i
 
       - name: Validate
-        run: pnpm test:ci
+        run: pnpm run-p lint test:ci test:e2e:ci
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
