--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore '**/*.css'",
 		"lint": "run-p run-tsc run-eslint run-stylelint",
-		"validate": "run-p lint test:ci test:e2e:headless"
+		"validate": "run-p lint test:ci test:e2e:headless",
+		"storybook": "start-storybook -p 9009"
 	},
 	"dependencies": {
 		"react": "17.0.2",
@@ -34,7 +35,12 @@
 		"@babel/preset-react": "7.16.5",
 		"@babel/preset-typescript": "7.16.5",
 		"@cypress/code-coverage": "3.9.12",
+		"@mdx-js/react": "1.6.22",
 		"@nabla/vite-plugin-eslint": "1.3.5",
+		"@storybook/addon-actions": "6.4.9",
+		"@storybook/addon-controls": "6.4.9",
+		"@storybook/addon-viewport": "6.4.9",
+		"@storybook/react": "6.4.9",
 		"@tailwindcss/forms": "0.4.0",
 		"@testing-library/cypress": "8.0.2",
 		"@testing-library/dom": "8.11.1",
@@ -52,6 +58,7 @@
 		"@vitejs/plugin-react": "1.1.3",
 		"autoprefixer": "10.4.0",
 		"babel-jest": "27.4.5",
+		"babel-loader": "8.2.3",
 		"css-mediaquery": "0.1.2",
 		"cypress": "9.2.0",
 		"cz-conventional-changelog": "3.3.0",
@@ -68,6 +75,7 @@
 		"eslint-plugin-react": "7.28.0",
 		"eslint-plugin-react-hooks": "4.3.0",
 		"eslint-plugin-react-prefer-function-component": "0.0.7",
+		"eslint-plugin-storybook": "0.5.5",
 		"eslint-plugin-testing-library": "5.0.1",
 		"eslint-plugin-unicorn": "39.0.0",
 		"husky": "7.0.4",
@@ -81,6 +89,7 @@
 		"rollup": "2.62.0",
 		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
+		"storybook-builder-vite": "0.1.12",
 		"stylelint": "14.2.0",
 		"stylelint-config-prettier": "9.0.3",
 		"stylelint-config-standard": "24.0.0",
