--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-query": "3.34.15",
-		"react-router-dom": "5.3.0"
+		"react-router-dom": "6.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.17.2",
@@ -53,6 +53,7 @@
 		"@vitejs/plugin-react": "1.2.0",
 		"autoprefixer": "10.4.2",
 		"babel-jest": "27.5.1",
+		"commitizen": "4.2.4",
 		"css-mediaquery": "0.1.2",
 		"cypress": "9.4.1",
 		"cz-conventional-changelog": "3.3.0",
@@ -115,5 +116,10 @@
 		"reporter": [
 			"lcov"
 		]
+	},
+	"config": {
+		"commitizen": {
+			"path": "cz-conventional-changelog"
+		}
 	}
 }
